--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
 		"@sveltejs/kit": "2.50.2",
 		"@sveltejs/package": "2.5.7",
 		"@sveltejs/vite-plugin-svelte": "6.2.4",
-		"@terrazzo/cli": "0.10.5",
-		"@terrazzo/plugin-css": "0.10.4",
+		"@terrazzo/cli": "2.0.0-beta.4",
+		"@terrazzo/plugin-css": "2.0.0-beta.4",
 		"@types/node": "25.2.0",
 		"@vitest/browser-playwright": "4.0.18",
 		"@vitest/coverage-v8": "4.0.18",
